waybar improvements, added bash script for system update

--- a/.config/hypr/hyprconfigs/keybinds.conf
+++ b/.config/hypr/hyprconfigs/keybinds.conf
@@ -27,7 +27,7 @@ bind = $mainMod, S, togglesplit,
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, P, pseudo,
 
-bind = $mainMod, Z, exit,   # TODO: exit .sh script
+bind = $mainMod SHIFT, Z, exit,   # TODO: exit .sh script
 
 #--- MOVE WINDOW FOCUS-------------------------------------------------------------------#
 
