--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -51,7 +51,7 @@ env = MOZ_ENABLE_WAYLAND,1
 
 #--- WINDOW RULES --------------------------------------------------------#
 
-#add custom source here
+source = $srcPath/winrules.conf
 
 #--- INPUT ---------------------------------------------------------------#
 
@@ -61,7 +61,7 @@ input {
 
     follow_mouse = 1
 
-a    touchpad {
+    touchpad {
         disable_while_typing = true
         natural_scroll = false
     }
